--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,17 @@ dynamic = ["version"]
 # Note: To install, must specify one of [local] or [from_github]
 dependencies = [
     "ray",
+    "utils",
     "numpy",
     "apexpy",
     "spaceweather",
     "h5py",
     "matplotlib",
     "cartopy",
+    "geodarn @ git+https://github.com/billetd/geodarn.git@main",
+    "pydarnio @ git+https://github.com/billetd/pyDARNio@borealis_v0.7",
+    "pydarn @ git+https://github.com/SuperDARN/pydarn.git@develop",
+    "lompe[deps-from-github,extras] @ git+https://github.com/billetd/lompe.git@main",
 ]
 
 [project.optional-dependencies]
@@ -23,10 +28,6 @@ local = [
 ]
 # To use the online versions instead
 deps-from-github = [
-    "lompe[deps-from-github,extras]@git+https://github.com/billetd/lompe.git@main",
-    "geodarn@git+https://github.com/billetd/geodarn.git@main",
-    "pydarnio@git+https://github.com/billetd/pyDARNio@borealis_v0.7",
-    "pydarn@git+https://github.com/SuperDARN/pydarn.git@develop",
 ]
 extras = [
 ]
