--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "matplotlib",
     "cartopy",
     "geodarn @ git+https://github.com/billetd/geodarn.git@main",
+    "pydarn @ git+https://github.com/SuperDARN/pydarn.git@develop",
     "pydarnio @ git+https://github.com/billetd/pyDARNio@borealis_v0.7",
     "lompe[deps-from-github,extras] @ git+https://github.com/billetd/lompe.git@main",
 ]
